# Cognitive-Supply-Networks-Multi-Agentic-AI

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/src/agents/: __init__.py  alert.py  demand.py  factory.py  inventory.py  orchestrator.py  routing.py  vendor.py
backend/src/core/: config.py
backend/src/data/: products.py
backend/src/tools/: __init__.py  alert.py  demand.py  inventory.py  routing.py  tools.py  vendor.py
backend/src/utils/: state.py
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/components/: Tool.tsx  Workflow.tsx
frontend/src/lib/: types.ts
scripts/: run-agent.bat  run-agent.sh  setup-agent.bat  setup-agent.sh
